--- a/cntct.html
+++ b/cntct.html
@@ -1,7 +1,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <html>
     <head>
-        <title>Ojan Contacts</title>
+        <title>OjanRN - Contacts</title>
         <link rel="stylesheet" href="stylecntct.css">
         <body>
             <h1>
@@ -14,6 +14,7 @@
                 ojanrizky11@gmail.com
             </h2>
             <hr>
+            <a href="index.html">Back to home</a>
 
 
 
