--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@
                 <a href="aboutme.html">About ME!</a>
                 <a> | </a>
                 <a href="cntct.html">Contacts</a>
+                <a> | </a>
+                <a href="https://ojanrn.github.io/ojanterminal.com/">Back to Terminal</a>
             </h1>
             <hr>
             <h6>
